<resources>
    <string name="app_name">Library-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <color name="primary_color">#ed1b2f</color>
    <color name="light_color">#eef1ef</color>
    <color name="dark_color">#262626</color>
    <color name="dark_secondary">#414141</color>

    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="need_to_signup_text">Don\'t have an account?</string>
    <string name="signup_button_text">Sign Up</string>

    <string name="onlineUser_logout_text">Logout</string>
    <string name="deleteAccount_button_text">Delete Account</string>
    <string name="deleteAccount_dialog_title">Delete Account</string>
    <string name="deleteAccount_dialog_text">Are you sure you want to delete your account?</string>
    <string name="deleteAccount_dialog_yes">Yes</string>
    <string name="deleteAccount_dialog_no">No</string>
    <string name="deleteAccount_request_failure">Account not deleted. Please try again</string>
    <string name="onlineUser_manageAccount_text">Manage Account</string>
    <string name="onlineUser_manageAccount_back_text">Back</string>
    <string name="onlineUser_manageAccount_showInfo_text">Browse Info</string>
    <string name="onlineUser_manageAccount_changePassword_text">Change Password</string>

    <string name="browse_albums_button">Browse Albums</string>
    <string name="browse_books_button">Browse Books</string>
    <string name="browse_movies_button">Browse Movies</string>
    <string name="browse_newspapers_button">Browse Newspapers</string>

    <string name="changePassword_back_text">Back</string>
    <string name="changePassword_userName_hint">Enter Username</string>
    <string name="changePassword_oldPassword_hint">Enter Old Password</string>
    <string name="changePassword_newPassword_hint">Enter New Password</string>
    <string name="changePassword_confirm_newPassword_hint">Confirm New Password</string>
    <string name="changePassword_confirm_text">Confirm</string>
    <string name="onlineUser_manageAccount_changeUserInfo_text">Change User Info</string>
    <string name="changeUserInfo_back_text">Back</string>
    <string name="changeUserInfo_firstName_hint">Enter New First Name</string>
    <string name="changeUserInfo_lastName_hint">Enter New Last Name</string>
    <string name="changeUserInfo_address_hint">Enter New Address</string>
    <string name="changeUserInfo_username_hint">Enter New Username</string>
    <string name="changeUserInfo_local_hint">Local</string>
    <string name="changeUserInfo_confirm_text">Confirm</string>
    <string name="changeUserInfo_email_hint">Enter New Email</string>
    <string name="changeUserInfo_password_hint">Enter Password To Confirm Changes</string>

    <string name="signup_firstname_hint">First Name</string>
    <string name="signup_lastname_hint">Last Name</string>
    <string name="signup_address_hint">Address</string>
    <string name="signup_islocal_hint">Local</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_email_hint">Email</string>

    <string name="addevent_startdate_hint">Start Date\: YYYY\-MM\-DD</string>
    <string name="addevent_enddate_hint">End Date\: YYYY\-MM\-DD</string>
    <string name="addevent_starttime_hint">Start Time\: HH\:mm\:ss</string>
    <string name="addevent_endtime_hint">End Time\: HH\:mm\:ss</string>
    <string name="addevent_timeslot_button_text">Create TimeSlot</string>
    <string name="addevent_button_text">Create Event</string>
    <string name="addevent_name_hint">Event Name</string>
    <string name="addevent_isprivate_hint">Private</string>
    <string name="addevent_isaccepted_hint">Accepted</string>
    <string name="addevent_back_button_text">Back</string>

    <string name="viewevent_eventId_hint">Event Id : #</string>
    <string name="viewevent_view_button_text">View Event</string>





    <string name="back_text">Back</string>
    <string name="reservation_year_hint">year (yyyy)</string>
    <string name="reservation_month_hint">month (mm)</string>
    <string name="reservation_day_hint">day (dd)</string>
    <string name="reservation_return_button_text">Select</string>
    <string name="reservation_item_id">Search item by id...</string>
    <string name="reservation_viewItem_text">View item</string>
    <string name="reservation_browseItems_text">Browse items</string>
    <string name="reservation_item_selected">Selected</string>
    <string name="reservation_reserveItem_button_text">Reserve item</string>
    <string name="reservation_refresh_button_text">Refresh</string>
    <string name="reservation_viewReservation_text">View reservation</string>
    <string name="reservation_reload_button_text">reload</string>

    <string name="cancelEvent_text">Are you sure you want to cancel this event?</string>
    <string name="cancelEvent_yes">Yes</string>
    <string name="cancelEvent_no">No</string>

    <string name="cancelReservation_text">Are you sure you want to cancel this reservation?</string>
    <string name="cancelReservation_yes">Yes</string>
    <string name="cancelReservation_no">No</string>


</resources>