<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/signup_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_firstname_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/signup_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_lastname_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/signup_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_address_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <CheckBox
            android:id="@+id/signup_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/signup_islocal_hint"
            android:textColor="@color/light_color"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_username_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_password_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />
        <TextView
            android:id="@+id/signup_valid_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password must be 8 characters long, have one capital letter and contain one of the following special characters: (!,@,#,$,%,^,&amp;,*,+,-,=,?,_)"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_email_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="signUp"
            android:text="@string/signup_button_text"
            android:textColor="@color/light_color"
            app:cornerRadius="100px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="toLogin"
            android:text="@string/back_text"
            android:textColor="@color/light_color"
            app:cornerRadius="100px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text=""
            android:textColor="#FF0000"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>