<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text=""
            android:textColor="#FF0000"/>


        <TextView
            android:id="@+id/addevent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Event"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/addevent_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/addevent_startdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/addevent_startdate_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/addevent_enddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/addevent_enddate_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/addevent_starttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/addevent_starttime_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <EditText
            android:id="@+id/addevent_endtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/addevent_endtime_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="createTimeSlot"
            android:text="@string/addevent_timeslot_button_text"
            android:textColor="@color/light_color"
            app:cornerRadius="100px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/signup_valid_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please create a timeslot before creating an event."
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addevent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/addevent_name_hint"
            android:textAlignment="center"
            android:textColor="@color/light_color"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <CheckBox
            android:id="@+id/addevent_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/addevent_isprivate_hint"
            android:textColor="@color/light_color"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <CheckBox
            android:id="@+id/addevent_accepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/addevent_isaccepted_hint"
            android:textColor="@color/light_color"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColorHighlight="@color/primary_color"
            android:textColorHint="@color/light_color"
            android:textColorLink="@color/primary_color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="createEvent"
            android:text="@string/addevent_button_text"
            android:textColor="@color/light_color"
            app:cornerRadius="100px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="toOnlineUser"
            android:text="@string/addevent_back_button_text"
            android:textColor="@color/light_color"
            app:cornerRadius="100px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>