<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/changePassword_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="153dp"
        android:text=""
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/changePassword_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/changePassword_userName_hint"
        android:textAlignment="center"
        android:textColor="@color/light_color"
        android:textColorHighlight="@color/primary_color"
        android:textColorHint="@color/light_color"
        android:textColorLink="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/changePassword_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/changePassword_oldPassword_hint"
        android:textAlignment="center"
        android:textColor="@color/light_color"
        android:textColorHighlight="@color/primary_color"
        android:textColorHint="@color/light_color"
        android:textColorLink="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/changePassword_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/changePassword_newPassword_hint"
        android:textAlignment="center"
        android:textColor="@color/light_color"
        android:textColorHighlight="@color/primary_color"
        android:textColorHint="@color/light_color"
        android:textColorLink="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/changePassword_confirm_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/changePassword_confirm_newPassword_hint"
        android:textAlignment="center"
        android:textColor="@color/light_color"
        android:textColorHighlight="@color/primary_color"
        android:textColorHint="@color/light_color"
        android:textColorLink="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/changePassword_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="153dp"
        android:text=""
        android:textColor="#00FF19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_changePassword_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="153dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="153dp"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:onClick="changePassword"
        android:text="@string/changePassword_confirm_text"
        android:textColor="@color/light_color"
        app:cornerRadius="100px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword_confirm_newPassword" />

    <Button
        android:id="@+id/button_changePassword_toManageAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:onClick="toManageAccount"
        android:text="@string/changePassword_back_text"
        android:textColor="@color/light_color"
        app:cornerRadius="100px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>